Added a mutuallyExclusive field to the Question type
